--- a/package.json
+++ b/package.json
@@ -1,11 +1,37 @@
 {
   "name": "vuecli",
   "version": "1.0.0",
-  "description": "学习vue cli做了什么\r 一步一步的通过 webpack4来搭建自己的vue开发环境",
+  "description": "学习vue cli做了什么 一步一步的通过 webpack来搭建自己的vue开发环境",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpackTest": "webpack --config ./build/webpack.config.js",
+    "dev": "webpack serve  --config ./build/webpack.config.js"
   },
   "author": "csy",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.1.3",
+    "cache-loader": "^4.1.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
+    "postcss-loader": "^8.1.1",
+    "sass-loader": "^16.0.0",
+    "style-loader": "^4.0.0",
+    "thread-loader": "^4.0.2",
+    "vue-loader": "^17.3.1",
+    "vue-template-compiler": "^2.7.16",
+    "webpack": "^5.93.0",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
+  },
+  "dependencies": {
+    "@babel/runtime-corejs2": "^7.25.0",
+    "core-js": "^2.6.12",
+    "vue": "^3.4.37"
+  }
 }
